# ----------------------------------------------------------------------------
# @file    slicecamd/CMakeLists.txt
# @brief   input to the CMake build system for building slicecam daemon
# @author  David Hale <dhale@caltech.edu>
# ----------------------------------------------------------------------------

cmake_minimum_required( VERSION 3.12 )

set( SLICECAMD_DIR ${PROJECT_BASE_DIR}/slicecamd )

set( CMAKE_CXX_STANDARD 17 )

# C-Python API Development libraries and headers
#
find_package( Python3 COMPONENTS Development )
if ( Python3_FOUND )
  list( GET Python3_INCLUDE_DIRS 0 PYTHON_DEV )
  list( GET Python3_LIBRARIES 0 PYTHON_LIB )
else()
  find_path( PYTHON_DEV "Python.h" PATHS /usr/include/python3.9 )
  find_library( PYTHON_LIB NAMES python3.9 libpython3.9 PATHS /usr/lib64 )
endif()
if ( UNIX AND NOT APPLE )
  add_link_options( -lcrypt -lpthread -ldl -lutil -lm -lm )
endif()

# ZeroMQ
#
find_library( ZMQPP_LIB NAMES zmqpp libzmqpp
              PATHS /usr/local/lib /opt/homebrew/lib /usr/local/opt/zmqpp/lib /opt/homebrew/opt/zmqpp/lib )
find_library( ZMQ_LIB NAMES zmq libzmq
              PATHS /usr/local/lib /opt/homebrew/lib /usr/local/opt/zeromq/lib /opt/homebrew/opt/zeromq/lib )

# CFITSIO, CCfits
#
find_library( CCFITS_LIB CCfits NAMES libCCfits PATHS /usr/local/lib /opt/homebrew/lib )
find_library( CFITS_LIB cfitsio NAMES libcfitsio  PATHS /usr/local/lib /opt/homebrew/lib )

include_directories( ${PROJECT_BASE_DIR}/utils )
include_directories( ${PROJECT_BASE_DIR}/Andor )
include_directories( ${PROJECT_BASE_DIR}/emulator )
include_directories( ${PROJECT_BASE_DIR}/common )
include_directories( ${PROJECT_BASE_DIR}/tcsd )
include_directories( ${PYTHON_DEV} )

add_executable(slicecamd 
        ${SLICECAMD_DIR}/slicecamd.cpp 
        ${SLICECAMD_DIR}/slicecam_server.cpp 
        ${SLICECAMD_DIR}/slicecam_interface.cpp 
        ${SLICECAMD_DIR}/slicecam_fits.cpp
        ${PYTHON_DEV}
        )

target_link_libraries(slicecamd
        andor
        network
        common
        tcsd_client
        logentry
        utilities
        skyinfo
        ${ZMQPP_LIB}
        ${ZMQ_LIB}
        ${PYTHON_LIB}
        ${CCFITS_LIB}
        ${CFITS_LIB}
        ${CMAKE_THREAD_LIBS_INIT}
        )

target_compile_options(slicecamd PRIVATE -g -Wall -O1 -Wno-variadic-macros -ggdb)

# -- External Definitions ------------------------------------------------------
#
# The following external definitions keep the definitions in one place
# rather than in each of the config files. These include files are used to
# generate the .cfg files.
#
INCLUDE( ${PROJECT_BASE_DIR}/Config/portdefs )    # portdefs is the master list of ports
INCLUDE( ${PROJECT_BASE_DIR}/Config/ets8p )       # ports in the ETS8P terminal server
INCLUDE( ${PROJECT_BASE_DIR}/Config/privatelan )  # private IP addresses
set ( SLICECAMD_CFG_COMMENT "This file is automatically generated. Manual edits may be overwritten." )
CONFIGURE_FILE( ${PROJECT_BASE_DIR}/Config/slicecamd.cfg.in ${PROJECT_BASE_DIR}/Config/slicecamd.cfg )
