# ----------------------------------------------------------------------------
# @file    slitd/CMakeLists.txt
# @brief   input to the CMake build system for building slit daemon
# @author  David Hale <dhale@caltech.edu>
# ----------------------------------------------------------------------------

cmake_minimum_required( VERSION 3.12 )

set( SLITD_DIR ${PROJECT_BASE_DIR}/slitd )

set( CMAKE_CXX_STANDARD 17 )

include_directories( ${PROJECT_BASE_DIR}/utils )
include_directories( ${PROJECT_BASE_DIR}/PI )
include_directories( ${PROJECT_BASE_DIR}/common )

link_directories( ${PROJECT_BASE_DIR}/lib )

add_executable(slitd 
        ${SLITD_DIR}/slitd.cpp 
        ${SLITD_DIR}/slit_server.cpp 
        ${SLITD_DIR}/slit_interface.cpp 
        )

target_link_libraries(slitd
        physik_instrumente
        network
        common
        logentry
        utilities
        ${CMAKE_THREAD_LIBS_INIT}
        )

# Set the setgid bit on the resulting executable
add_custom_command( TARGET slitd POST_BUILD COMMAND chmod g+s $<TARGET_FILE:slitd> )

# -- Port Definitions ----------------------------------------------------------
#
# portdefs is the master list of ports for NGPS and is used to generate the
# individual .cfg files to avoid conflicts across multiple files, by keeping
# them all in one place..
#
INCLUDE( ${PROJECT_BASE_DIR}/Config/portdefs )
INCLUDE( ${PROJECT_BASE_DIR}/Config/privatelan )
INCLUDE( ${PROJECT_BASE_DIR}/Config/ets8p )
set ( SLITD_CFG_COMMENT "This file is automatically generated. Manual edits may be overwritten." )
CONFIGURE_FILE( ${PROJECT_BASE_DIR}/Config/slitd.cfg.in ${PROJECT_BASE_DIR}/Config/slitd.cfg )
