# ----------------------------------------------------------------------------
# @file    tcsd/CMakeLists.txt
# @brief   input to the CMake build system for building tcs daemon
# @author  David Hale <dhale@caltech.edu>
# ----------------------------------------------------------------------------

cmake_minimum_required( VERSION 3.12 )

set( TCSD_DIR ${PROJECT_BASE_DIR}/tcsd )

set( CMAKE_CXX_STANDARD 17 )

add_definitions( -Wall -O1 -Wno-variadic-macros -ggdb )
#add_definitions( -Wall -Wextra -Wconversion -Wshadow -O1 -Wno-variadic-macros -ggdb )

include_directories( ${PROJECT_BASE_DIR}/utils )
include_directories( ${PROJECT_BASE_DIR}/common )
link_directories( ${PROJECT_BASE_DIR}/lib )

# ZeroMQ
#
find_library( ZMQPP_LIB NAMES zmqpp libzmqpp
              PATHS /usr/local/lib /opt/homebrew/lib /usr/local/opt/zmqpp/lib /opt/homebrew/opt/zmqpp/lib )
find_library( ZMQ_LIB NAMES zmq libzmq
              PATHS /usr/local/lib /opt/homebrew/lib /usr/local/opt/zeromq/lib /opt/homebrew/opt/zeromq/lib )

add_executable(tcsd 
        ${TCSD_DIR}/tcsd.cpp 
        ${TCSD_DIR}/tcs_server.cpp 
        ${TCSD_DIR}/tcs_interface.cpp 
        )

target_link_libraries(tcsd
        network
        common
        logentry
        utilities
        ${CMAKE_THREAD_LIBS_INIT}
        ${ZMQPP_LIB}
        ${ZMQ_LIB}
        )

add_library(tcsd_client STATIC
        ${TCSD_DIR}/tcsd_client.cpp
        )

# -- Port Definitions ----------------------------------------------------------
#
# portdefs is the master list of ports for NGPS and is used to generate the
# individual .cfg files to avoid conflicts across multiple files, by keeping
# them all in one place..
#
INCLUDE( ${PROJECT_BASE_DIR}/Config/portdefs )
INCLUDE( ${PROJECT_BASE_DIR}/Config/privatelan )
set ( TCSD_CFG_COMMENT "This file is automatically generated. Manual edits may be overwritten." )
CONFIGURE_FILE( ${PROJECT_BASE_DIR}/Config/tcsd.cfg.in ${PROJECT_BASE_DIR}/Config/tcsd.cfg ) 
