# ----------------------------------------------------------------------------
# @file    thermald/CMakeLists.txt
# @brief   input to the CMake build system for building thermal daemon
# @author  David Hale <dhale@caltech.edu>
# ----------------------------------------------------------------------------

cmake_minimum_required( VERSION 3.12 )

set( THERMALD_DIR ${PROJECT_BASE_DIR}/thermald )

set( CMAKE_CXX_STANDARD 17 )

add_definitions( -Wall -ansi -O1 -Wno-variadic-macros -ggdb )

include_directories( ${PROJECT_BASE_DIR}/utils )
include_directories( ${PROJECT_BASE_DIR}/LKS )
include_directories( ${PROJECT_BASE_DIR}/common )

link_directories( ${PROJECT_BASE_DIR}/lib )

# -- MySQL database ------------------------------------------------------------
#
set ( MYSQL_DIR "/usr/local/mysql/connector" )
find_path( MYSQL_API "mysqlx/xdevapi.h" PATHS ${MYSQL_DIR}/include )
set( MYSQL_INCLUDES "${MYSQL_API}" )
find_library( MYSQL_LIB "mysqlcppconn8" NAMES "mysqlcppconn8" PATHS ${MYSQL_DIR}/lib64 )
include_directories( ${MYSQL_INCLUDES} )

add_executable(thermald 
        ${THERMALD_DIR}/thermald.cpp 
        ${THERMALD_DIR}/thermal_server.cpp 
        ${THERMALD_DIR}/thermal_interface.cpp 
        ${MYSQL_INCLUDES}
        )

target_link_libraries(thermald
        lks
        network
        database
        common
        logentry
        utilities
        ${CMAKE_THREAD_LIBS_INIT}
        ${MYSQL_LIB}
        )

# Set the setgid bit on the resulting executable
add_custom_command( TARGET thermald POST_BUILD COMMAND chmod g+s $<TARGET_FILE:thermald> )

# -- Port/Address Definitions --------------------------------------------------
#
# portdefs is the master list of ports for NGPS and privatelan is the master
# list of all private LAN IP addresses; together they are used to generate the
# individual .cfg files to avoid conflicts across multiple files, by keeping
# them all in one place..
#
INCLUDE( ${PROJECT_BASE_DIR}/Config/portdefs )
INCLUDE( ${PROJECT_BASE_DIR}/Config/privatelan )
set ( THERMALD_CFG_COMMENT "This file is automatically generated. Manual edits may be overwritten." )
CONFIGURE_FILE( ${PROJECT_BASE_DIR}/Config/thermald.cfg.in ${PROJECT_BASE_DIR}/Config/thermald.cfg )
